@@ -10,9 +10,6 @@
 	<include package="collective.js.jqueryui" />
 	<include package=".browser" />
 	
-   <cmf:registerDirectory
-       name="ftw_favourites"/>
-
    <!-- Register locales translations -->
    <i18n:registerTranslations directory="locales" />
 
