@@ -1,19 +1,51 @@
 <?xml version="1.0"?>
 <object name="portal_actions" meta_type="Plone Actions Tool"
-        xmlns:i18n="http://xml.zope.org/namespaces/i18n">
-    <object name="document_actions" meta_type="CMF Action Category">
-        <object name="addtofavourites" meta_type="CMF Action" i18n:domain="plone">
-         <property name="title" i18n:translate="">Add to Favourites</property>
-         <property name="description" i18n:translate=""></property>
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <action-provider name="portal_workflow"/>
+ <action-provider name="portal_types"/>
+ <action-provider name="portal_actions"/>
+ <object name="document_actions" meta_type="CMF Action Category">
+  <object name="addtofavorites" meta_type="CMF Action" i18n:domain="plone">
+   <property name="title" i18n:translate="">Add to favorites</property>
+   <property name="description" i18n:translate=""></property>
+   <property name="url_expr">string:${object_url}/addtoFavorites</property>
+   <property name="icon_expr"> string:${object/portal_url}/++resource++ftw.dashboard.portlets.favourites.resources/icon_funktion_favoriten_negativ.gif</property>
+   <property
+      name="available_expr">python:(member is not None) and (portal.portal_membership.getHomeFolder() is not None)</property>
+   <property name="permissions">
+    <element value="View"/>
+   </property>
+   <property name="visible">True</property>
+  </object>
+ </object>
+ 
+ <object name="user" meta_type="CMF Action Category">
+  <property name="title"></property>
+  <object name="addFavorite" meta_type="CMF Action" i18n:domain="plone">
+   <property name="title" i18n:translate="">Add to favorites</property>
+   <property name="description" i18n:translate=""></property>
+   <property name="url_expr">string:${object_url}/addtoFavorites</property>
+   <property name="icon_expr"> string:${object/portal_url}/++resource++ftw.dashboard.portlets.favourites.resources/icon_funktion_favoriten_negativ.gif</property>
+   <property
+      name="available_expr">python: portal.portal_membership.getHomeFolder() is not None</property>
+   <property name="permissions">
+    <element value="View"/>
+   </property>
+   <property name="visible">False</property>
+  </object>
 
-         <property name="url_expr">string:${object_url}/addtofavourites</property>
-         <property
-            name="icon_expr"> string:${object/portal_url}/++resource++ftw.dashboard.portlets.favourites.resources/icon_funktion_favoriten_negativ.gif</property>
-         <property name="available_expr">member</property>
-         <property name="permissions">
-          <element value="View"/>
-         </property>
-         <property name="visible">True</property>
-      </object>
-	</object>
+  <object name="favorites" meta_type="CMF Action" i18n:domain="plone">
+   <property name="title" i18n:translate="">My favorites</property>
+   <property name="description" i18n:translate=""></property>
+   <property
+      name="url_expr">string:${portal/portal_membership/getHomeUrl}/Favorites/folder_contents</property>
+   <property name="icon_expr"></property>
+   <property
+      name="available_expr">python:(member is not None) and hasattr(portal.portal_membership.getHomeFolder(), "Favorites")</property>
+   <property name="permissions">
+    <element value="View"/>
+   </property>
+   <property name="visible">False</property>
+  </object>
+ </object>
 </object>
