@@ -1,13 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_skins" allow_any="False" cookie_persistence="False">
-
- <object name="ftw_favourites"
-    meta_type="Filesystem Directory View"
-    directory="ftw.dashboard.portlets.favourites:skins/ftw_favourites"/>
-
- <skin-path name="*" based-on="Plone Default">
-  <layer name="ftw_favourites"
-     insert-after="custom"/>
- </skin-path>
-
-</object>
